--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <title>Progress</title>
-    <link rel="stylesheet" href="dist/styles.css" />
   </head>
   <body>
     <div id="content"></div>
 
-    <script src="dist/main.js"></script>
+    <script src="http://localhost:8080/public/bundle.js"></script>
   </body>
 </html>
